--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,5 +1,5 @@
-title: Link free
-shortTitle: Link free
+title: Toko Buku Naya
+shortTitle: Toko Buku Naya
 siteUrl: https://themes.marscollective.co/link-free
 description: ''
 lang: en
