--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -8,9 +8,9 @@ favicon: favicon.png
 rounded: '16'
 colors:
   DEFAULT: '#FAFAFA'
-  highlight: '#00d1b7'
-  accent: '#262626'
-  background: '#262626'
+  highlight: '#4B3869'
+  accent: '#FFFFFF'
+  background: '#A9E4D7'
 tracking:
   which: none
   id: ''
